# leveldb-demo

./: CMakeLists.txt  README.md
externLib/leveldb/lib/: libleveldb.so.1.20
externLib/pugixml/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
lib/: LevelDB_Demo
source/: data.h  main.cpp
source/utils/: json_helper.hpp  xml_helper.hpp
